--- a/session-05/package.json
+++ b/session-05/package.json
@@ -8,13 +8,20 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "express",
+    "jwt",
+    "refresh-token",
+    "authentication"
+  ],
+  "author": "Mohamed Elhelaly",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
