--- a/session-05/package.json
+++ b/session-05/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^9.1.2",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.12",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "validator": "^13.15.26"
   },
   "devDependencies": {
